# astrobrowser

./: .gitignore  0.WA_sample_2023A1_40arcsec_2023-01-17_clean.csv  0.create_HiPS_target_list.csv  HRS.ipynb  HRS.out  HRS.py  HiPS_target_list.csv  README.md  SPARC-LegacySurveys.ipynb  SPARC-SDSS.ipynb  SPARC.ipynb  WALLABY_pilot.ipynb  data_explorer.ipynb  package-lock.json
HRS/: HRS.ipynb  HRS.out  cortese_2014_table2.vot
HRS/Optical_UV_cortese_2012/: ReadMe
SPARC/: SPARC-LegacySurveys.ipynb  SPARC.py  SPARC_Lelli2016c.mrt  SPARC_clean.mrt
SPARC/imaging/: GALEX_NUV.fits  ngc6195_SDSS-g.fits  ngc6195_SDSS-r.fits
SPARC/model_fits/ByGalaxy/Table/: DDO161.mrt  DDO170.mrt  ESO116-G012.mrt  ESO563-G021.mrt  F561-1.mrt  F563-1.mrt  F563-V2.mrt  F565-V2.mrt  F567-2.mrt  F568-V1.mrt  F571-8.mrt  F579-V1.mrt  F583-1.mrt  KK98-251.mrt  NGC0024.mrt  NGC0100.mrt  NGC0247.mrt  NGC0289.mrt  NGC0891.mrt  NGC1003.mrt  NGC1090.mrt  NGC2841.mrt  NGC2903.mrt  NGC2915.mrt  NGC2955.mrt  NGC3109.mrt  NGC3726.mrt  NGC3741.mrt  NGC3949.mrt  NGC3992.mrt  NGC4013.mrt  NGC4051.mrt  NGC4085.mrt  NGC4183.mrt  NGC5033.mrt  NGC5371.mrt  NGC6015.mrt  NGC6195.mrt  NGC6503.mrt  NGC6674.mrt  (+41 more)
WA/: HiPS_target_list.csv  data_explorer.ipynb
WALLABY/: AS102_Derived_Catalogue_wallaby_pilot_dr1_kinmodel_cat_v01_5844.csv  Explore_WALLABY_pilot.ipynb  Mass_modelling.ipynb  StellarSurfaceDensity.ipynb  WALLABY_pilot.ipynb
hrs/: HRS.py
pyscript/: index.html
pyscript/scripts/: show-file.py
scripts/: astrobrowser.py  pyproject.toml
sparc/imaging/: ngc6195_SDSS-i.fits
(+94 files in other folders)
