[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "astrobrowser"
version = "0.1.0"
authors = [
  { name="Yago Ascasibar", email="yago.ascasibar@uam.es" },
]
description = "AstroBrowser analysis scripts."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools]
py-modules = ["astrobrowser"]
